Builds target entities from ontologies